--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -21,5 +22,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.5.0"
   }
 }
