--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,8 +21,8 @@
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
-    "sharp": "^0.34.1",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "prisma": "^6.5.0"
